# stryke-parquet

./: .gitignore  Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: diagnostics.stk  discover.stk  head_stats.stk  inspect.stk  recompress.stk  stats.stk
lib/: Parquet.stk
src/: lib.rs  main.rs
t/: test_diagnostics.stk  test_parquet.stk  test_stryke_parquet_surface.stk
tests/: contract_cli_round4.rs
