[package]
name = "stryke-parquet-helper"
version = "0.1.0"
edition = "2021"
description = "Parquet diagnostic helper binary for the stryke `parquet` package."
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-parquet"
publish = false

[[bin]]
name = "stryke-parquet-helper"
path = "src/main.rs"

[dependencies]
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2",
    "flate2-rust_backened",
    "lz4",
    "zstd",
    "base64",
] }
arrow = "58"
arrow-json = "58"
arrow-csv = "58"
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
