[package]
name = "stryke-parquet"
version = "0.8.0"
edition = "2021"
description = "Parquet diagnostic + transform cdylib for the stryke `parquet` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-parquet"
homepage = "https://menketechnologies.github.io/stryke-parquet/"
publish = false

[lib]
name = "stryke_parquet"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
parquet = { version = "58", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2",
    "flate2-rust_backened",
    "lz4",
    "zstd",
    "base64",
] }
arrow = "58"
arrow-json = "58"
arrow-csv = "58"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
